testdata/baselines/reference/submodule/conformance/privateNamesIncompatibleModifiersJs.errors.txt
privateNamesIncompatibleModifiersJs.js(3,8): error TS8009: The 'public' modifier can only be used in TypeScript files.
privateNamesIncompatibleModifiersJs.js(3,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(8,8): error TS8009: The 'private' modifier can only be used in TypeScript files.
privateNamesIncompatibleModifiersJs.js(8,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(13,8): error TS8009: The 'protected' modifier can only be used in TypeScript files.
privateNamesIncompatibleModifiersJs.js(13,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(18,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(23,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(28,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(33,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(37,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(42,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(46,8): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(51,7): error TS18010: An accessibility modifier cannot be used with a private identifier.
privateNamesIncompatibleModifiersJs.js(55,8): error TS18010: An accessibility modifier cannot be used with a private identifier.


==== privateNamesIncompatibleModifiersJs.js (15 errors) ====
    class A {
        /**
         * @public
           ~~~~~~~
           ~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'public' modifier can only be used in TypeScript files.
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #a = 1;
    
        /**
         * @private
           ~~~~~~~~
           ~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'private' modifier can only be used in TypeScript files.
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #b = 1;
    
        /**
         * @protected
           ~~~~~~~~~~
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS8009: The 'protected' modifier can only be used in TypeScript files.
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #c = 1;
    
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #aMethod() { return 1; }
    
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #bMethod() { return 1; }
    
        /**
         * @protected
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        #cMethod() { return 1; }
    
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #aProp() { return 1; }
        /**
         * @public
           ~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #aProp(value) { }
    
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #bProp() { return 1; }
        /**
         * @private
           ~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #bProp(value) { }
    
        /**
        * @protected
          ~~~~~~~~~~
        */
    ~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        get #cProp() { return 1; }
        /**
         * @protected
           ~~~~~~~~~~
         */
    ~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        set #cProp(value) { }
    }
    